<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.corona_dashboard.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_countries"
        android:name="com.example.corona_dashboard.ui.gallery.GalleryFragment"
        android:label="@string/menu_countries"
        tools:layout="@layout/fragment_countries" />

    <fragment
        android:id="@+id/nav_continents"
        android:name="com.example.corona_dashboard.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_continents"
        tools:layout="@layout/fragment_continents" />
</navigation>